objects/MotoSnap_Activity__c.object
<CustomObject>
    <description>object that holds information and data sync&apos;d from MotoSnap</description>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Dealer__r.Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Failed__c</fullName>
        <label>Days Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MotoSnap Activities</relationshipLabel>
        <relationshipName>MotoSnap_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Provider__c</fullName>
        <inlineHelpText>same as Destination Name</inlineHelpText>
        <label>Export Provider</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extract_Id__c</fullName>
        <label>Extract Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invt_New_Extract_Date__c</fullName>
        <label>Invt - New Extract Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invt_Used_Extract_Date__c</fullName>
        <label>Invt - Used Extract Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Attempt_Date__c</fullName>
        <label>Last Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Send_Date__c</fullName>
        <label>Last Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Success_Date__c</fullName>
        <label>Last Success Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Upload_Date__c</fullName>
        <label>Last Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVC_Last_Open_RO_Date__c</fullName>
        <label>SVC - Last Open RO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Extract_Date__c</fullName>
        <label>Sales - Last Extract Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Svc_Last_Appts_Date__c</fullName>
        <label>Svc - Last Appts Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Svc_Last_Closed_RO_Date__c</fullName>
        <label>Svc - Last Closed RO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Failed Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Failed Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Admin Failed FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Summary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <label>MotoSnap Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invt_New_Extract_Date__c</columns>
        <columns>Invt_Used_Extract_Date__c</columns>
        <columns>Last_Attempt_Date__c</columns>
        <columns>Last_Send_Date__c</columns>
        <columns>Last_Success_Date__c</columns>
        <columns>Last_Upload_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>MotoSnap Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MotoSnap Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>